# zetachain-cross-chain-nft

./: Anchor.toml  COMMAND_DIRECTORY.md  CROSS_CHAIN_DEMO_RESULTS.md  HACKATHON_SUBMISSION.md  README.md  SECURITY.md  SYSTEM_STATUS.md  package-lock.json  package.json  replit.md
programs/universal-nft/: Cargo.toml
programs/universal-nft/src/instructions/: mod.rs
programs/universal-nft/src/utils/: compute.rs
