[package]
name = "universal-nft"
version = "0.1.0"
description = "Universal NFT program for cross-chain interactions with ZetaChain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "universal_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"
mpl-token-metadata = "3.2.0"
sha2 = "0.10.8"
bs58 = "0.5.0"
borsh = "1.0.0"
